--- a/doc/libconfig.texi
+++ b/doc/libconfig.texi
@@ -439,7 +439,7 @@ characters, dashes (@samp{-}), underscores (@samp{_}), and asterisks
 characters are allowed.
 
 In C and C++, integer, 64-bit integer, floating point, and string
-values are mapped to the types @code{int}, @code{long long},
+values are mapped to the native types @code{int}, @code{long long},
 @code{double}, and @code{const char *}, respectively. The boolean type
 is mapped to @code{int} in C and @code{bool} in C++.
 
@@ -523,6 +523,16 @@ value. For example, @samp{0L} indicates a 64-bit integer value 0.  As
 of version 1.5 of the library, the trailing `L' is optional; if the
 integer value exceeds the range of a 32-bit integer, it will
 automatically be interpreted as a 64-bit integer.
+
+The @i{integer} and @i{64-bit integer} setting types are interchangeable to the
+extent that a conversion between the corresponding native types would not
+result in an overflow or underflow. For example, a @i{long long} value can be
+written to a setting that has an @i{integer} type, if that value is within the
+range of an @i{int}. This rule applies to every API function or method that
+reads a value from or writes a value to a setting: if the type conversion would
+not result in an overflow or underflow, then the call will succeed, and
+otherwise it will fail. This behavior was not well-defined prior to version 1.7
+of the library.
 
 @node Floating Point Values, Boolean Values, 64-bit Integer Values, Configuration Files
 @comment  node-name,  next,  previous,  up
@@ -2082,8 +2092,8 @@ applies to settings of type @code{TypeInt} and @code{TypeInt64}. If
 
 @end deftypemethod
 
-@deftypemethod Setting bool exists (@w{const std::string &@var{name}})
-@deftypemethodx Setting bool exists (@w{const char *@var{name}})
+@deftypemethod Setting bool exists (@w{const std::string &@var{name}}) const
+@deftypemethodx Setting bool exists (@w{const char *@var{name}}) const
 
 These methods test if the setting has a child setting with the given
 @var{name}. They return @code{true} if the setting exists, and
@@ -2181,6 +2191,10 @@ An example C program that constructs a new configuration in memory and writes it
 
 @item examples/c++/example3.cpp
 The C++ equivalent of @file{example3.c}
+
+@item examples/c/example4.c
+An example C program that uses a custom include function for processing
+wildcard includes. Note that this code will not compile on Windows.
 
 @end table
 
